# PAROL6-ROS2-MOVEIT-Jazzy

./: README.md
ros_parol/install/: setup.bash  setup.ps1  setup.sh  setup.zsh
ros_parol/src/install/: setup.bash  setup.ps1  setup.sh  setup.zsh
ros_parol/src/install/parol6/share/ament_index/resource_index/parent_prefix_path/: parol6
ros_parol/src/install/parol6/share/parol6/urdf/: PAROL6 (copy).urdf  parol6.urdf
ros_parol/src/install/parol6_moveit/share/parol6_moveit/: package.xml
ros_parol/src/parol6/: CMakeLists.txt  package.xml
ros_parol/src/parol6/launch/: gazebo.launch.py
ros_parol/src/parol6/meshes/: L6.STL
ros_parol/src/parol6/urdf/: parol6.urdf
ros_parol/src/parol6_moveit/: package.xml
ros_parol/src/parol6_moveit/config/: joint_limits.yaml  moveit_controllers.yaml  parol6.ros2_control.xacro  parol6.srdf  parol6.urdf.xacro  ros2_controllers.yaml
ros_parol/src/parol6_moveit/launch/: demo.launch.py  gazebo.launch.py
